[tool.poetry]
name = "asp-tools"
version = "0.1.0"
description = ""
authors = ["Atsushi Yoshida <aug7.a.yoshida@gmail.com>"]
readme = "README.md"
packages = [{include = "asp_tools", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
scipy = "^1.11.1"
seaborn = "^0.12.2"
jupyterlab = "^4.0.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
