[tool.poetry]
name = "asp-tools"
version = "0.1.0"
description = ""
authors = ["Atsushi Yoshida <aug7.a.yoshida@gmail.com>"]
readme = "README.md"
packages = [{include = "asp_tools", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "1.23.3"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
scipy = "^1.11.1"
seaborn = "^0.12.2"
jupyterlab = "^4.0.3"
sox = "^1.4.1"
librosa = "^0.10.0.post2"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
omegaconf = "^2.3.0"
mlflow = "^2.5.0"
hydra-core = "^1.3.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
